force-app/main/default/objects/Quality_Assessment_Question__c/Quality_Assessment_Question__c.object-meta.xml
<CustomObject>
    <label>Quality Assessment Question</label>
    <nameField>
        <displayFormat>QAQ-{0000}</displayFormat>
        <label>Quality Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assessment Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>