force-app/main/default/objects/Quality_Assessment_Question__c/fields/Multi_Choice_Options__c.field-meta.xml
<CustomField>
    <fullName>Multi_Choice_Options__c</fullName>
    <label>Multi Choice Options</label>
    <formula>Question__r.Multi_Choice_Option_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>