force-app/main/default/objects/Quality_Assessment_Question__c/fields/Pass_Fail_Question__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail_Question__c</fullName>
    <label>Pass Fail Question</label>
    <formula>Question__r.Pass_Fail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>