force-app/main/default/objects/Quality_Assessment_Question__c/fields/Quality_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assessment__c</fullName>
    <label>Quality Assessment</label>
    <referenceTo>Quality_Assessment__c</referenceTo>
    <relationshipLabel>Quality Assessment Questions</relationshipLabel>
    <relationshipName>Quality_Assessment_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>