force-app/main/default/objects/Quality_Assessment_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Quality_Assurance_Question__c</referenceTo>
    <relationshipLabel>Quality Assessment Questions</relationshipLabel>
    <relationshipName>Quality_Assessment_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>