force-app/main/default/objects/Quality_Assessment_Question__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <label>Question Order</label>
    <formula>Question__r.Question_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>