force-app/main/default/objects/Quality_Assessment_Question__c/fields/Question_Section__c.field-meta.xml
<CustomField>
    <fullName>Question_Section__c</fullName>
    <label>Question Section</label>
    <formula>Question__r.Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>