force-app/main/default/objects/Quality_Assessment_Question__c/fields/Question_Weight__c.field-meta.xml
<CustomField>
    <fullName>Question_Weight__c</fullName>
    <label>Question Weight</label>
    <formula>Question__r.Question_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>